# iot-device-sdk-embedded-c

./: .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  RELEASE-NOTES.md
.github/workflows/: posix.yml
api/: DoxygenLayout.xml  customdoxygen.css  doxygen.config  header.html
api/html/: annotated.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  files_dup.js  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  index.html  menudata.js  navtreedata.js  navtreeindex0.js  pages.html  usergroup0.html  usergroup1.html
api/html/search/: all_3.js  enums_0.js  functions_0.js  pages_1.js  searchdata.js
bsp/: doxygen.config
bsp/html/: annotated.html  annotated_dup.js  dir_892c6830e89bd42b86edfc698815ae23.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  index.html  menudata.js  navtreedata.js  navtreeindex0.js  usergroup0.html
bsp/html/search/: all_1.js  all_3.js  classes_0.js  defines_0.js  enumvalues_0.js  files_0.js  functions_0.js  searchdata.js  variables_2.js  variables_3.js  variables_a.js
doc/: porting_guide.md  user_guide.md
doc/dev/: fuzz_tests_programmer_manual.md
doc/doxygen/: build.sh
doc/doxygen/api/: DoxygenLayout.xml  doxygen.config  header.html
doc/doxygen/bsp/: DoxygenLayout.xml  doxygen.config  header.html
docs/: porting_guide.md  user_guide.md
docs/doxygen/bsp/: doxygen.config
examples/: .gitignore  .gitmodules  Makefile  rules.mk  targets.mk
examples/common/: atecc_get_pubkey.py  rules.mk  targets.mk
examples/common/src/: commandline.c  commandline.h  example_init.c  example_init.h  example_utils.c  example_utils.h
examples/espressif/: CMakeLists.txt  requirements.sh
examples/espressif/esp32-gateway/: CMakeLists.txt  README.md
examples/espressif/iot-device-sdk-embedded-c/: CONTRIBUTING.md  LICENSE.md
examples/freertos_linux/: FreeRTOSConfig.h  main.c  makefile
examples/freertos_linux/Linux_gcc_gcp_iot/: FreeRTOSConfig.h  README.md  main.c  makefile
examples/iot_core_mqtt_client/: Makefile  README.md
examples/iot_core_mqtt_client/src/: iot_core_mqtt_client.c
examples/iotc_roughtime_client/: Makefile
examples/iotc_roughtime_client/src/: iotc_roughtime_client.c
examples/mqtt_logic_producer/: Makefile
examples/mqtt_logic_producer/src/: mqtt_logic_producer.c
examples/zephyr_native_posix/: CMakeLists.txt  README.md  prebuild.sh  prj.conf
examples/zephyr_native_posix/src/: main.c
include/: iotc.h  iotc_connection_data.h  iotc_error.h  iotc_jwt.h  iotc_mqtt.h  iotc_roughtime_client.h  iotc_time.h  iotc_types.h
include/bsp/: iotc_bsp_crypto.h  iotc_bsp_io_fs.h  iotc_bsp_io_net.h  iotc_bsp_mem.h  iotc_bsp_rng.h  iotc_bsp_time.h  iotc_bsp_tls.h  iotc_test_echoserver.h
make/mt-config/: mt-config.mk  mt-crypto.mk  mt-examples.mk  mt-presets.mk  mt-roughtime.mk  mt-target-platform.mk  mt-tls-mbedtls.mk  mt-tls-wolfssl.mk  mt-tls.mk
make/mt-config/tests/: mt-avr.mk  mt-gtest.mk  mt-native.mk  mt-qemu-cortex-m3.mk  mt-tests-fuzz.mk  mt-tests-integration.mk  mt-tests-tools.mk  mt-tests-unit.mk  mt-tests.mk
make/mt-os/: mt-arm-linux.mk  mt-esp32.mk  mt-freertos-linux.mk  mt-linux.mk  mt-os-common.mk  mt-os.mk  mt-osx.mk  mt-zephyr.mk
make/mt-utils/: mt-get-gnu-arm-toolchain.mk
res/tls/: build_mbedtls.sh  build_wolfssl.sh  wolfssl.conf
res/travis/: travis_build_mbedtls.expect
res/trusted_RootCA_certs/: README.md  roots.pem
src/bsp/: iotc_bsp_debug.h
src/bsp/crypto/: iotc_bsp_crypto_base64_test.cc  iotc_bsp_crypto_ecc_test.cc  iotc_bsp_crypto_sha256_test.cc  iotc_bsp_crypto_test_base64.cc  iotc_bsp_crypto_test_ecc.cc  iotc_bsp_crypto_test_sha256.cc
src/bsp/platform/: iotc_bsp_io_net_test.cc
src/bsp/tls/: iotc_bsp_crypto_test_ecc.cc  iotc_bsp_crypto_test_sha256.cc
src/libiotc/: iotc.c  iotc_backoff_lut_config.h  iotc_backoff_status_api.c  iotc_backoff_status_api.h  iotc_common.h  iotc_config.h  iotc_connection_data.c  iotc_connection_data_internal.h  iotc_coroutine.h  iotc_data_desc.c  iotc_data_desc.h  iotc_debug.c  iotc_debug.h  iotc_err.c  iotc_err.h  iotc_error.c  iotc_globals.c  iotc_globals.h  iotc_handle.c  iotc_handle.h  iotc_helpers.c  iotc_helpers.h  iotc_internals.c  iotc_internals.h  iotc_io_timeouts.c  iotc_io_timeouts.h  iotc_jwt.c  iotc_jwt.h  iotc_jwt_internal.h  iotc_jwt_test.cc  iotc_layer.h  iotc_layer_api.c  iotc_layer_api.h  iotc_layer_chain.h  iotc_layer_default_allocators.c  iotc_layer_default_allocators.h  iotc_layer_default_functions.c  iotc_layer_default_functions.h  iotc_layer_factory.h  iotc_layer_macros.h  (+15 more)
src/libiotc/control_topic/: iotc_control_topic_layer.c  iotc_control_topic_layer.h
src/libiotc/datastructures/: iotc_list.h  iotc_memory_type.h  iotc_vector.c  iotc_vector.h
src/libiotc/event_dispatcher/: iotc_event_dispatcher.c  iotc_event_dispatcher_api.h  iotc_event_dispatcher_macros.h  iotc_event_dispatcher_test.cc  iotc_event_handle.c  iotc_event_handle.h  iotc_event_handle_queue.h  iotc_event_handle_test.cc  iotc_event_handle_typedef.h  iotc_event_thread_dispatcher.c  iotc_event_thread_dispatcher.h  iotc_time_event.c  iotc_time_event.h
src/libiotc/event_loop/: iotc_event_loop.c  iotc_event_loop.h
src/libiotc/memory/: iotc_allocator.c  iotc_allocator.h
src/libiotc/tls/: iotc_tls_layer.c  (+2 more)
src/protofiles/: control_topic.proto
src/tests/: iotc_freertos_impl.c  iotc_heapcheck_test.h  iotc_lamp_communication.h  iotc_memory_checks.c  iotc_memory_checks.h  iotc_openssl_utils.cc  iotc_openssl_utils.h  iotc_tt_testcase_management.h
tools/: create_buffer.py  create_layer.py  format_code.py  test_coverage.sh
zephyr/: CMakeLists.txt
(+593 files in other folders)
